# LMS

./: .gitmodules  docker-compose.yml
.github/workflows/: scheduler.yml
backend/: CMakeLists.txt
backend/src/: db.cpp
frontend/: main.py
frontend/components/: checklist.py  clickable_lable.py  date_label.py  day.py  day_navigator.py  start_button.py  task.py  title.py
frontend/components/days/: friday.py  monday.py  saturday.py  sunday.py  thursday.py  tuesday.py  wednesday.py
frontend/pages/: tasks.py
notify/: CMakeLists.txt  Makefile  MyNotificationServer  main.cpp  ntfy.cpp
postgres/: init.sql
